<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presentation.Main.first.MainActivity"
    >



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/contactlogo"
        android:id="@+id/logologin"

        >

    </ImageView>

    <EditText
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/logologin"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:id="@+id/usernamelogin"
        android:hint="@string/username"
        />

    <EditText
        android:layout_centerHorizontal="true"
        android:layout_below="@id/usernamelogin"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:id="@+id/maillogin"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:layout_centerHorizontal="true"
        android:layout_below="@id/maillogin"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:id="@+id/passwordlogin"
        android:hint="@string/password"
        android:inputType="textPassword"
        />

    <Button
        android:layout_below="@id/passwordlogin"
        android:layout_centerHorizontal="true"
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/loginbtn"
        />

    <com.google.android.material.button.MaterialButton
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/loginButton"
        android:layout_centerHorizontal="true"
        android:text="@string/create"
        android:background="@color/white"
        android:textColor="@color/black"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/createbutton"
        />

</RelativeLayout>

